--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529988922
+    eco: null
+    guid: 41ce0f65-8768-42fc-9f67-df734aef456e
+    state: running
