--- a/zrobot_data/webhooks.yml
+++ b/zrobot_data/webhooks.yml
@@ -1,3 +1,6 @@
 -   id: 4acf4935762989720463e8982306b89a
     kind: eco
     url: http://172.17.0.2:8200/restmachine/zrobot/client/taskCallback?authkey=a6ce2e0e-ad81-412a-acf9-fb1acf1e1684
+-   id: 2434babe1aa7d6b3e4efcbf785a3f2ee
+    kind: eco
+    url: http://172.17.0.2:8200/restmachine/zrobot/client/taskCallback?authkey=005fa89e-a76a-4131-9ad8-5cdebc4e6f78
