--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: install
+    args: {}
+    created: 1530095497
+    eco: null
+    guid: dac345c5-6a47-4b94-8394-21c096586c74
+    state: running
+-   action_name: save
+    args: null
+    created: 1530095506
+    eco: null
+    guid: 43031e37-5340-43ad-88e9-d4f7b49d5dba
+    state: new
