--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1530141826
+    eco: null
+    guid: 84fac474-07f0-4a99-b1e0-9547d6a8c226
+    state: running
