--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1530647696
+    eco: null
+    guid: ff738f7f-1c80-41c3-9065-12d818e57fa5
+    state: running
