--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1530656726
+    eco: null
+    guid: b0f6f5c3-4ae5-42bc-825a-193516761aec
+    state: running
