--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot4/9b616564-75f2-433b-9fb8-b0139a78c08a/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1530661076
+    eco: null
+    guid: 5628f9b4-c95c-41aa-893f-6a502d6e8e78
+    state: running
